--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,7 +113,8 @@ dependencies {
 
     implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
 
-    implementation group: 'com.squareup.picasso', name: 'picasso', version: '2.71828'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
@@ -122,5 +123,7 @@ dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.1.0"
+
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
 }
