--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
+        maven { url "https://www.jitpack.io" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
@@ -29,6 +30,7 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
+        maven { url "https://www.jitpack.io" }
     }
 }
 
