--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.5.0'
-    ext.hilt_version = '2.33-beta'
+    ext.kotlin_version = '1.5.20'
+    ext.hilt_version = '2.37'
     repositories {
         google()
         mavenCentral()
         maven { url "https://www.jitpack.io" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.1'
+        classpath 'com.android.tools.build:gradle:4.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         def nav_version = "2.3.0-alpha03"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
