--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.6.0'
+    ext.kotlin_version = '1.4.32'
     ext.hilt_version = '2.37'
+    ext.compose_version = '1.0.5'
     repositories {
         google()
         mavenCentral()
