--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ if ( keystorePropertiesFile.exists() ) {
 
 android {
 
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion '30.0.2'
     buildFeatures {
         dataBinding = true
@@ -27,7 +27,7 @@ android {
     defaultConfig {
         applicationId "ru.g0rd1.peoplesfinder"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "ru.g0rd1.peoplesfinder.MockTestRunner"
@@ -76,10 +76,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
@@ -87,7 +87,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation "androidx.fragment:fragment-ktx:1.3.6"
+    implementation "androidx.fragment:fragment-ktx:1.4.0"
 
     implementation "androidx.multidex:multidex:2.0.1"
 
@@ -100,7 +100,7 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
-    def room_version = "2.3.0"
+    def room_version = "2.4.0"
 
     implementation "com.google.code.gson:gson:2.8.6"
 
@@ -130,10 +130,10 @@ dependencies {
 
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
-    def paging_version = "3.0.1"
-
-    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
-    implementation "androidx.paging:paging-rxjava2-ktx:$paging_version"
+//    def paging_version = "3.0.1"
+//
+//    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+//    implementation "androidx.paging:paging-rxjava2-ktx:$paging_version"
 
     implementation 'com.github.badoo.mvicore:mvicore:1.2.6'
     implementation 'com.github.badoo.mvicore:binder:1.2.6'
