--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,6 @@ if ( keystorePropertiesFile.exists() ) {
 android {
 
     compileSdkVersion 31
-    buildToolsVersion '30.0.2'
     buildFeatures {
         dataBinding = true
     }
@@ -34,12 +33,6 @@ android {
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
         kapt {
-            javacOptions {
-                // These options are normally set automatically via the Hilt Gradle plugin, but we
-                // set them manually to workaround a bug in the Kotlin 1.5.20
-                option("-Adagger.fastInit=ENABLED")
-                option("-Adagger.hilt.android.internal.disableAndroidSuperclassValidation=true")
-            }
             arguments {
                 arg("room.schemaLocation", "$projectDir/schemas".toString())
                 arg("room.incremental", "true")
@@ -75,19 +68,18 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation "androidx.fragment:fragment-ktx:1.4.0"
+    implementation "androidx.fragment:fragment-ktx:1.4.1"
 
     implementation "androidx.multidex:multidex:2.0.1"
 
@@ -100,7 +92,7 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
-    def room_version = "2.4.0"
+    def room_version = "2.4.1"
 
     implementation "com.google.code.gson:gson:2.8.6"
 
@@ -141,4 +133,5 @@ dependencies {
 
     implementation 'nl.littlerobots.rxlint:rxlint:1.7.8'
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
 }
