--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,7 @@
 # org.gradle.parallel=true
 #Fri Oct 02 00:07:00 YEKT 2020
 android.enableJetifier=true
+android.nonTransitiveRClass=true
 android.useAndroidX=true
 kotlin.code.style=official
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
